# GCDObsidian

./: ArrowTest.hs  Evaluate.hs  Examples.hs  Examples2.hs  ExpM.hs  Experimental.org  GCDObsidian.cabal  LICENSE  MTestP.hs  README.org  Simplified_situation.hs  Sort.hs  Test.hs  TestP.hs  kernTest.hs
CLTemplate/: Makefile  template.c
CTemplate/: Makefile  template.c
CUDABindingsTest/: Test.hs  test.cu  test.cubin
CUDASortTemplate/: vsort.cu
CUDASorter/: Makefile  vsort.cu  vsort_kernel.cu
CUDATemplate/: template.cu
Combinators/: Combs.hs  README.org  ghciCombs.sh
Combinators/CUDAMergers/: Makefile  mergers.cu
CoordTemplate/: Makefile  template  template.cu
DAMP2012/: Paper.hs
DAMP2012/LargeSort/: Makefile  cpusort.c  msortBig.cu  tsortBig.cu
DAMP2012/LargeSort2/: Makefile  diff_ms.h  mssort.cu
DAMP2012/LargeSort3/: Makefile  bitonicKernel.cu  bmergeKernel.cu  mssort.cu  sorttest.cu  tmerge1Kernel.cu  tsort1Kernel.cu  tsortKernel.cu  vsort1Kernel.cu  vsortKernel.cu
LicExamples/: Reduce.hs  Reduce.hs~
Obsidian/: Coordination.hs  GCDObsidian.hs
Obsidian/Coordination/: Array.hs  Array.hs~  CoordC.hs
Obsidian/GCDObsidian/: Array.hs  Blocks.hs  Elem.hs  Evaluate.hs  Exp.hs  Force.hs  Globs.hs  Helpers.hs  Kernel.hs  Library.hs  Memory.hs  ModifyArray.hs  Printing.hs  Program.hs  Shape.hs  Store.hs  Sync.hs  Tuple.hs  Types.hs
Obsidian/GCDObsidian/AddOn/: ArrowObsidian.hs  SortLang.hs
Obsidian/GCDObsidian/CodeGen/: C.hs  CUDA.hs  Common.hs  InOut.hs  Liveness.hs  Memory.hs  OpenCL.hs  PP.hs  Program.hs  SPMDC.hs  SyncAnalysis.hs
(+3 files in other folders)
